--- a/app/src/main/res/drawable/red.xml
+++ b/app/src/main/res/drawable/red.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#ff3333" android:endColor="#ff8080"  />
-        </shape>
-    </item>
+
+    <!--When red button is pressed than change it's color to redpressed-->
+    <item android:state_pressed="true"  android:drawable="@drawable/redpressed" />
+
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
@@ -14,10 +11,12 @@
             <solid android:color="#ff0000"/>
         </shape>
     </item>
+
+    <!--Red button attributes-->
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
+            <stroke android:width="0.3sp" android:color="#000000" />
             <gradient android:angle="-90" android:startColor="#ff3333" android:endColor="#ff8080"  />
         </shape>
     </item>
