--- a/app/src/main/res/drawable/shapeblue.xml
+++ b/app/src/main/res/drawable/shapeblue.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#3333ff" android:endColor="#9999ff" />
-        </shape>
-    </item>
+
+    <!--When blue button is pressed than change it's color to bluepressed-->
+    <item android:state_pressed="true" android:drawable="@drawable/bluepressed"/>
+
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
@@ -14,10 +11,12 @@
             <solid android:color="#0000ff"/>
         </shape>
     </item>
+
+    <!--Blue button attributes-->
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
+            <stroke android:width="0.3sp" android:color="#000000" />
             <gradient android:angle="-90" android:startColor="#0000ff" android:endColor="#3333ff"  />
         </shape>
     </item>
