--- a/app/src/main/res/drawable/shapegreen.xml
+++ b/app/src/main/res/drawable/shapegreen.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#00ff77" android:endColor="#99ff99"  />
-        </shape>
-    </item>
+
+    <!--When green button is pressed than change it's color to greenpressed-->
+    <item android:state_pressed="true" android:drawable="@drawable/greenpressed" />
+
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
@@ -14,10 +11,12 @@
             <solid android:color="#00ff00"/>
         </shape>
     </item>
+
+    <!--Green button attributes-->
     <item >
         <shape android:shape="rectangle" >
             <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
+            <stroke android:width="0.3sp" android:color="#000000" />
             <gradient android:angle="-90" android:startColor="#00ff00" android:endColor="#00ff77"  />
         </shape>
     </item>
