--- a/app/src/main/res/drawable/shapeyellow.xml
+++ b/app/src/main/res/drawable/shapeyellow.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#ff3333" android:endColor="#ff8080"  />
-        </shape>
-    </item>
+
+    <!--When yellow button is pressed than change it's color to yellowpressed-->
+    <item android:state_pressed="true" android:drawable="@drawable/yellowpressed"/>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
@@ -14,10 +10,12 @@
             <solid android:color="#ffff00"/>
         </shape>
     </item>
+
+    <!--Yellow button attributes-->
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
-            <stroke android:width="1sp" android:color="#000000" />
+            <stroke android:width="0.3sp" android:color="#000000" />
             <gradient android:angle="-90" android:startColor="#ffff00" android:endColor="#ffffc4"  />
         </shape>
     </item>
