--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,20 +12,22 @@
             android:gravity="center"
             android:layout_marginBottom="20sp">
             <Button android:onClick="Green"
+                android:id="@+id/GreenBtn"
             android:layout_width="150sp"
             android:layout_height="match_parent"
             android:background="@drawable/shapegreen"
                 android:layout_marginRight="20sp" />
             <Button android:onClick="Red"
+                android:id="@+id/RednBtn"
                 android:layout_width="150sp"
                 android:layout_height="match_parent"
-                android:background="@drawable/shape"/>
+                android:background="@drawable/red"/>
         </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="1"
+        android:text="0"
         android:textSize="30sp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,11 +35,13 @@
             android:orientation="horizontal"
             android:gravity="center">
             <Button android:onClick="Yellow"
+                android:id="@+id/YellowBtn"
                 android:layout_width="150sp"
                 android:layout_height="match_parent"
                 android:background="@drawable/shapeyellow"
                 android:layout_marginRight="20sp"/>
             <Button android:onClick="Blue"
+                android:id="@+id/BlueBtn"
                 android:layout_width="150sp"
                 android:layout_height="match_parent"
                 android:background="@drawable/shapeblue" />
@@ -49,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center">
+
                 <ImageView android:onClick="Play"
                     android:clickable="true"
                     android:layout_width="90sp"
