--- a/app/src/main/res/drawable/red.xml
+++ b/app/src/main/res/drawable/red.xml
@@ -2,7 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!--When red button is pressed than change it's color to redpressed-->
-    <item android:state_pressed="true"  android:drawable="@drawable/redpressed" />
+    <item android:state_pressed="true">
+    <shape android:shape="rectangle"  >
+        <corners android:radius="100sp" />
+        <stroke android:width="1sp" android:color="#000000" />
+        <gradient android:angle="-90" android:startColor="#ffffff" android:endColor="#ff8080"  />
+    </shape>
+</item>
 
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
