--- a/app/src/main/res/drawable/shapeyellow.xml
+++ b/app/src/main/res/drawable/shapeyellow.xml
@@ -2,7 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!--When yellow button is pressed than change it's color to yellowpressed-->
-    <item android:state_pressed="true" android:drawable="@drawable/yellowpressed"/>
+    <item android:state_pressed="true">
+    <shape android:shape="rectangle"  >
+        <corners android:radius="100sp" />
+        <stroke android:width="1sp" android:color="#000000" />
+        <gradient android:angle="-90" android:startColor="#ffffff" android:endColor="#ffff80"  />
+    </shape>
+</item>
+
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="100sp" />
