--- a/app/src/main/res/layout/activity_high_score_show.xml
+++ b/app/src/main/res/layout/activity_high_score_show.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.admin.myapplication.HighScoreShow"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#20f5f8">
 
     <TextView
         android:layout_width="match_parent"
