--- a/app/src/main/res/layout/activity_high_score_show.xml
+++ b/app/src/main/res/layout/activity_high_score_show.xml
@@ -28,18 +28,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1">
         <Button android:onClick="backToMenu"
             android:layout_gravity="center"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
+            android:layout_width="100sp"
+            android:layout_height="100sp"
             android:text="Main Menu"
             android:background="@drawable/shapeblue" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1">
         <Button android:onClick="backToGame"
             android:layout_gravity="center"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
+            android:layout_width="100sp"
+            android:layout_height="100sp"
             android:text="Play"
             android:background="@drawable/shapegreen" />
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
